# cpp_default_project

./: .clang-format  .gitignore  CMakeLists.txt  README.md  install.py
cmake/: APIExportFlags.cmake  CompilerSanitizers.cmake  CompilerWarnings.cmake  Conan.cmake  DefaultProjectSettings.cmake  Doxygen.cmake  StaticAnalysis.cmake
src/: main.cpp
test/: CMakeLists.txt  catch_main.cpp  constexpr_tests.cpp
